move to java 21